testsuite/tests/parser/should_fail/RecordDotSyntaxFail8.stderr
RecordDotSyntaxFail8.hs:37:3: error: [GHC-39999]
    • Ambiguous type variable ‘a0’ arising from a use of ‘print’
      prevents the constraint ‘(Show a0)’ from being solved.
      Probable fix: use a type annotation to specify what ‘a0’ should be.
      Potentially matching instances:
        instance Show Ordering -- Defined in ‘GHC.Internal.Show’
        instance Show Bar -- Defined at RecordDotSyntaxFail8.hs:22:41
        ...plus 29 others
        ...plus 13 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the first argument of ‘($)’, namely ‘print’
      In a stmt of a 'do' block: print $ ....baz.quux
      In the expression:
        do let a = ...
           print $ ....quux

RecordDotSyntaxFail8.hs:37:11: error: [GHC-39999]
    • No instance for ‘HasField "quux" Quux a0’
        arising from selecting the field ‘quux’
    • In the second argument of ‘($)’, namely ‘....baz.quux’
      In a stmt of a 'do' block: print $ ....baz.quux
      In the expression:
        do let a = ...
           print $ ....quux
    Suggested fix:
      NB: There is no field selector ‘quux :: Quux
                                              -> a0’ in scope for record type ‘Quux’

